Data Ingestion and Data Transformation modules are added

--- a/notebook/Model_Training.ipynb
+++ b/notebook/Model_Training.ipynb
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "072a8e2b",
    "metadata": {},
    "outputs": [
@@ -585,17 +585,214 @@
     "    print('The absolute mean error is:', mean_absolute_error(Y_test,y_pred))\n",
     "    print('The mean squared error is:', mean_squared_error(Y_test,y_pred))\n",
     "\n",
-    "    print('-------------------------------------')"
+    "   print('-------------------------------------')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "9e3b4f28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'olleh'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def reverse_string(s):\n",
+    "    return s[::-1]\n",
+    "\n",
+    "reverse_string(\"hello\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e3b4f28",
+   "id": "fa3549ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4, 5}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def return_unique(num_lst):\n",
+    "    return set(num_lst)\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "func([1,2,3,4,2,5,2,1,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "863d4c8a",
    "metadata": {},
    "outputs": [],
    "source": [
-    " "
+    "\n",
+    "def word_counter(example):\n",
+    "    words = example.split()\n",
+    "    word_count = {}\n",
+    "    for word in words:\n",
+    "        if word in word_count:\n",
+    "            word_count[word] +=1\n",
+    "        else:\n",
+    "            word_count[word]=1\n",
+    "    return word_count\n",
+    "\n",
+    "\n",
+    "example = 'The red fox The black fox The white fox'\n",
+    "\n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "5790024b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>race/ethnicity</th>\n",
+       "      <th>parental level of education</th>\n",
+       "      <th>lunch</th>\n",
+       "      <th>test preparation course</th>\n",
+       "      <th>math score</th>\n",
+       "      <th>reading score</th>\n",
+       "      <th>writing score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>bachelor's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>72</td>\n",
+       "      <td>72</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>69</td>\n",
+       "      <td>90</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>master's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>90</td>\n",
+       "      <td>95</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group A</td>\n",
+       "      <td>associate's degree</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>47</td>\n",
+       "      <td>57</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>76</td>\n",
+       "      <td>78</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   gender race/ethnicity parental level of education         lunch  \\\n",
+       "0  female        group B           bachelor's degree      standard   \n",
+       "1  female        group C                some college      standard   \n",
+       "2  female        group B             master's degree      standard   \n",
+       "3    male        group A          associate's degree  free/reduced   \n",
+       "4    male        group C                some college      standard   \n",
+       "\n",
+       "  test preparation course  math score  reading score  writing score  \n",
+       "0                    none          72             72             74  \n",
+       "1               completed          69             90             88  \n",
+       "2                    none          90             95             93  \n",
+       "3                    none          47             57             44  \n",
+       "4                    none          76             78             75  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f975b519",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby('gender').mean()"
    ]
   }
  ],
